fix footer spacing

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -664,17 +664,17 @@ pre code:before, pre code:after, pre tt:before, pre tt:after {
 
 /* Custom styling below */
 
-$footer-height: 100px;
+$footer-height: 120px;
 
 .app-container {
   margin: 0 auto;
   padding-top: 0;
   position: relative;
-  min-height: calc(100vh - #{$footer-height});
+  min-height: 100vh;
 }
 
 .content-container {
-  padding-bottom: $footer-height;
+  padding-bottom: 120px;
 }
 
 .footer {
@@ -688,11 +688,11 @@ $footer-height: 100px;
 
 .footer-content {
   max-width: 960px;
-  height: 90%;
+  height: 100%;
   margin-left: auto;
   margin-right: auto;
   padding-left: 1.0875rem;
-  padding-top: 10px;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
